[gd_scene load_steps=8 format=3 uid="uid://b87weyt1fdune"]

[ext_resource type="Script" path="res://GUI/GUIMenuScenes/escape_menu.gd" id="1_1fhvt"]
[ext_resource type="Texture2D" uid="uid://dn46njyxsjug5" path="res://GUI/MenuBackgrounds/MenuBackgroundImage.png" id="1_h0vl4"]
[ext_resource type="FontFile" uid="uid://cnqgqyunqiim5" path="res://GUI/Fonts/GlitchGoblin-2O87v.ttf" id="2_67fr0"]
[ext_resource type="FontFile" uid="uid://b10uvsj1044em" path="res://GUI/Fonts/PixelEmulator-xq08.ttf" id="3_8avqw"]
[ext_resource type="Theme" uid="uid://w7en7g743evq" path="res://GUI/UITheme.tres" id="4_4kvc5"]

[sub_resource type="LabelSettings" id="LabelSettings_q4aiv"]
font = ExtResource("2_67fr0")
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_ekkja"]
font = ExtResource("3_8avqw")
font_size = 24
outline_size = 6
outline_color = Color(0.988235, 0.345098, 0.231373, 1)
shadow_size = 20
shadow_color = Color(0.113725, 0.329412, 0.113725, 0.0901961)

[node name="EscapeMenuCanvasLayer" type="CanvasLayer"]
layer = 2
script = ExtResource("1_1fhvt")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -704.0
offset_top = -476.0
offset_right = 704.0
offset_bottom = 476.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_h0vl4")

[node name="Tittle" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -453.0
offset_top = 239.0
offset_right = 454.0
offset_bottom = 354.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_67fr0")
text = "Escape Protocol"
label_settings = SubResource("LabelSettings_q4aiv")

[node name="StatusLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -558.0
offset_top = -308.0
offset_right = -362.0
offset_bottom = -256.0
grow_horizontal = 2
grow_vertical = 2
text = "Connecting..."
label_settings = SubResource("LabelSettings_ekkja")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = 96.0
offset_right = 183.5
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_4kvc5")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_8avqw")
text = " Resume "

[node name="MainMenuButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_8avqw")
text = " Main Menu "

[node name="RestartButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = " Restart "

[node name="QuitGameButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = " Quit Game "

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
