extends CanvasLayer


func _on_resume_button_pressed():
	pass # Replace with function body.


func _on_main_menu_button_pressed():
	pass # Replace with function body.


func _on_restart_button_pressed():
	pass # Replace with function body.


func _on_quit_game_button_pressed():
	pass # Replace with function body.
